--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
   provider: ^6.0.5
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
