--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.5
   provider: ^6.0.5
   clipboard: ^0.1.3
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
